# vcom-object-detection

./: .gitignore  10images.txt  CMakeCache.txt  CMakeLists.txt  Makefile  build_tests.sh  cmake_install.cmake  generate_trainset.sh  images.txt  main.cpp  responses.txt  timer.cpp  timer.h  trainer.cpp  trainset.txt
bow/: CMakeLists.txt  bow.h  bow_descriptor.cpp  bow_descriptor.h  bow_kmeans.cpp  bow_kmeans.h
confs/: 1.txt  10.txt  11.txt  12.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
description/: CMakeLists.txt  descriptor.h  sift_descriptor.cpp  sift_descriptor.h  surf_descriptor.cpp  surf_descriptor.h
detection/: CMakeLists.txt  Makefile  cmake_install.cmake  detector.h  harris_detector.cpp  harris_detector.h  sift_detector.cpp  sift_detector.h  surf_detector.cpp  surf_detector.h
matching/: CMakeLists.txt  bruteforce_matcher.cpp  bruteforce_matcher.h  flann_matcher.cpp  flann_matcher.h  matcher.h
